up and running again

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://alessandrobaffa.com/"
+baseurl = "https://alebaffa.github.io/"
 title = "alebaffa's"
 theme = "ghostwriter"
 languageCode = "en-EN"
