--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ highlight = "monokai_sublime"
     title = "blog"
     intro = true
     avatar = "speaker-small.jpg"
-    headline = "The chronicles of a Software Engineer"
+    headline = "chronicles of a Software Engineer"
     description = "Alessandro Baffa's blog"
     github = "https://github.com/alebaffa"
     linkedin = "https://linkedin.com/in/alessandrobaffa/"
