--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ highlight = "monokai_sublime"
     title = "blog"
     intro = true
     avatar = "speaker-small.jpg"
-    headline = "~/alebaffa/weblog"
+    headline = "@alebaffa's weblog"
     description = "Computer science is no more about computers than astronomy is about telescopes"
     github = "https://github.com/alebaffa"
     linkedin = "https://linkedin.com/in/alessandrobaffa/"
