--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "https://alebaffa.com/"
-title = "Welcome"
+title = "weblog"
 theme = "internet-weblog"
 pygmentsstyle = "emacs"
 SectionPagesMenu = "main"
