--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/internet-weblog"]
 	path = themes/internet-weblog
 	url = https://github.com/jnjosh/internet-weblog.git
+
+[submodule "themes/hugo-classic"]
+	path = themes/internet-weblog
+	url = https://github.com/goodroot/hugo-classic.git
