--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ googleAnalytics = "UA-114385313-1"
 preserveTaxonomyNames = true
 enableEmoji = true
 footnotereturnlinkcontents = "↩"
-disqusShortname = "alebaffacom"
+disqusShortname = "alebaffa"
 
 [permalinks]
     post = "/post/:year/:month/:day/:slug/"
