--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,7 @@
 [submodule "themes/hugo-classic"]
 	path = themes/hugo-classic
 	url = https://github.com/goodroot/hugo-classic.git
+
+[submodule "themes/hyde"]
+	path = themes/hyde
+	url = https://github.com/spf13/hyde.git
