--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ languageCode = "en-US"
 layoutdir = "layouts"
 publishdir = "public"
 author = "Alessandro Baffa"
-title = "Alessandro Baffa"
+title = "Alessandro Baffa's weblog"
 disqusshortname = "alebaffa"
 pluralizelisttitles = false
 
@@ -15,6 +15,7 @@ pluralizelisttitles = false
 blog = "blog/:slug/"
 
 [params]
+enlarged = true
 dateform = "Jan 2, 2006"
 dateformfull = "Mon Jan 2 2006 15:04:05 MST"
 description = "If opportunity doesn't know, build a door"
@@ -28,7 +29,7 @@ share = true
 # Share to googleplus, twitter, fb, linkedin by default
 # disable by setting share_on_<social network> = false
 # example: share_on_googleplus = false
-latestpostcount = 5
+latestpostcount = 25
 github = "alebaffa"
 email = "contact@alebaffa.com"
 linkedin = "alessandrobaffa"
