--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ blog = "blog/:slug/"
 enlarged = true
 dateform = "Jan 2, 2006"
 dateformfull = "Mon Jan 2 2006 15:04:05 MST"
-description = "If opportunity doesn't know, build a door"
+description = "If opportunity doesn't knock, build a door"
 copyright = "Copyright © 2018 Alessandro Baffa"
 # copyrightUrl = "https://creativecommons.org/licenses/by-sa/4.0/"
 logofile = "img/logo.png"
