--- a/config.toml
+++ b/config.toml
@@ -1,80 +1,54 @@
-#baseurl = "https://www.alebaffa.com/"
-baseurl = "/"
-theme = "cocoa-eh"
-builddrafts = true
-canonifyurls = true
-contentdir = "content"
-languageCode = "en-US"
-layoutdir = "layouts"
-publishdir = "public"
 author = "Alessandro Baffa"
-title = "Alessandro Baffa's weblog"
-disqusshortname = "alebaffa"
-pluralizelisttitles = false
-hasCJKLanguage = true
-
-disableHugoGeneratorInject = true
-enableEmoji = true
-footnoteReturnLinkContents = "↩"
-googleAnalytics = "UA-114385313-1"
-
-[permalinks]
-blog = "blog/:slug/"
-
-[menu]
-
-  [[menu.main]]
-    identifier = "home"
-    name = "Home"
-    url = "/"
-    weight = 10
-
-  [[menu.main]]
-    identifier = "posts"
-    name = "Posts"
-    url = "/posts"
-    weight = 20
+baseurl = "/"
+canonifyurls = true
+#copyright = "Copyright © 2008–2018, Steve Francia and the Hugo Authors; all rights reserved."
+paginate = 5
+theme = "alageek"
+title = "ALEBAFFA.COM"
 
 [params]
-enlarged = true
-dateform = "Jan 2, 2006"
-dateformfull = "Mon Jan 2 2006 15:04:05 MST"
-description = "If opportunity doesn't knock, build a door"
-copyright = "Copyright © 2018 Alessandro Baffa"
-# copyrightUrl = "https://creativecommons.org/licenses/by-sa/4.0/"
-logofile = "img/logo.png"
-faviconfile = "img/logo.png"
-highlightjs = true
-progressively = true
-share = true
-# Share to googleplus, twitter, fb, linkedin by default
-# disable by setting share_on_<social network> = false
-# example: share_on_googleplus = false
+copyright = "© 2020 by Alessandro Baffa"
+copyrightUrl = "https://www.alebaffa.com"
+description = "Alessandro Baffa website"
+faviconfile = "img/ale.jpg"
 latestpostcount = 25
+logofile = "img/ale.jpg"
+highlightjs = true
+highlightjslanguages = [ "bash", "css", "diff", "java", "javascript", "python", "golang" ]
+toc = true
+posts_navigation = true
+progressively = true
 github = "alebaffa"
-email = "contact@alebaffa.com"
-medium = "alebaffa"
 linkedin = "alessandrobaffa"
 twitter = "alebaffa"
-facebook = "alessandro.baffa"
-instagram = "alebaffa"
-#itch_io = "itch_io_id"
-social_banner = "img/logo.png"
-usesmallsummarycard = true
-posts_navigation = true
-# issoHost = "comments.domain.tld:1234"
-# githubRepo = "githubUsername/repositoryName/tree/master"
-small_banner_logo = false
+email = "contact@alebaffa.com"
 
-[params.colors]
-identifier = "#527fc1f"
-identifier_dark = "#1a3152"
-trivial = "#6a7a8b"
-foreground = "#181d2a"
-background = "#f9f9f9"
-background_dark = "#282a36"
-code = "#87a5d2"
-type = "#97d28b"
-special = "#ffcb8d"
-value = "#96c2d7"
-statement = "#ff8e91"
+[[menu.primary]]
+identifier = "blog"
+name = "Blog"
+url = "/blog/"
+weight = 10
+
+[[menu.primary]]
+identifier = "about"
+name = "About"
+url = "/about/"
+weight = 20
+
+#[[menu.secondary]]
+#identifier = "patreon"
+#name = "Become a patron"
+#url = "https://www.patreon.com/bePatron?u=10637849"
+#weight = 110
+
+#[[menu.secondary]]
+#identifier = "bmc"
+#name = "Buy me a coffee"
+#url = "https://www.buymeacoffee.com/gokmen"
+#weight = 120
+
+[[menu.footer]]
+identifier = "tags"
+name = "Tags"
+url = "/tags/"
+weight = 50
