--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ canonifyurls = true
 #copyright = "Copyright © 2008–2018, Steve Francia and the Hugo Authors; all rights reserved."
 paginate = 5
 theme = "alageek"
-title = "ALEBAFFA.COM"
+title = "sha2-256-256-a2cab2ed3b"
 
 [params]
 copyright = "© 2020 by Alessandro Baffa"
