added amarcord posts

--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ baseurl = "/"
 languageCode = "en-us"
 canonifyurls = true
 #copyright = "Copyright © 2008–2018, Steve Francia and the Hugo Authors; all rights reserved."
-paginate = 5
+paginate = 25
 copyright = "You"
 theme = "hugo-theme-cactus"
 title = "alebaffa.eth"
@@ -19,7 +19,7 @@ mainSection = "blog" # your main section
 #faviconfile = "img/ale.jpg"
 latestpostcount = 25
 #logofile = "img/ale.jpg"
-showAllPostsOnHomePage = false # default
+showAllPostsOnHomePage = true # default
 postsOnHomePage = 15 # this option will be ignored if showAllPostsOnHomePage is set to true
 tagsOverview = false # show tags overview by default.
 showProjectsList = true # show projects list by default (if projects data file exists).
