--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ relativeUrls = "true"
 colortheme = "dark" # dark, light, white, or classic
   rss = true # generate rss feed. default value is false
 copyrightUrl = "https://www.alebaffa.com"
-description = "Hi, I'm Alessandro Baffa, software engineer and blockchain solution architect from Italy and based in Tokyo. In this blog I post technical contents about my learnings in blockchain, decentralization and web 3.0."
+description = "Hi, I'm Alessandro Baffa, Software Engineer and Solutions Architect from Italy, now based in Tokyo. This is my personal blog, it lived multiple lives since 2007. My current interests are Cloud Computing, Blockchain and Web 3.0"
 mainSection = "blog" # your main section
 #faviconfile = "img/ale.jpg"
 latestpostcount = 25
