--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/cocoa-eh"]
+[submodule "themes/hugo-theme-cactus"]
 	path = themes/cocoa-eh
-	url = https://github.com/mtn/cocoa-eh-hugo-theme.git
+	url = https://github.com/monkeyWzr/hugo-theme-cactus.git
