--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ relativeUrls = "true"
   latestpostcount = 25
   showAllPostsOnHomePage = true # default
   postsOnHomePage = 15 # this option will be ignored if showAllPostsOnHomePage is set to true
-  tagsOverview = true # show tags overview by default.
+  tagsOverview = false # show tags overview by default.
   showProjectsList = false # show projects list by default (if projects data file exists).
   projectsUrl = "https://github.com/gohugoio" # title link for projects list
 
