--- a/config.toml
+++ b/config.toml
@@ -1,89 +1,146 @@
-author = "Alessandro Baffa"
+# Hey, thanks for using my theme. If you like this theme,checkout my repo (https://gitlab.com/avron/gruvhugo"
+# and drop a star while you're at it. ;)
 baseurl = "/"
+title = "Alessandro Baffa"
 languageCode = "en-us"
-canonifyurls = true
-copyright = "Alessandro Baffa; some rights reserved."
-paginate = 25
-theme = "hugo-theme-cactus"
-title = "alebaffa.eth"
-relativeUrls = "true"
+paginate = "10" # Number of posts per page
+#disqusShortname = "" # Enable comments by entering your Disqus shortname
+#googleAnalytics = "" # Enable Google Analytics by entering your tracking id
+#-------------------------------------------------------------------------------
+# DEFAULT SETTINGS
+#-------------------------------------------------------------------------------
 
-[params]
-  colortheme = "dark" # dark, light, white, or classic
-  rss = true # generate rss feed. default value is false
-  description = "Hi, I'm Alessandro Baffa, Software Engineer and Solutions Architect from Italy, now based in Tokyo. This is my personal blog, it lived multiple lives since 2007. My current interests are Cloud Computing, Blockchain and Web 3.0"
-  mainSection = "blog" # your main section
-  latestpostcount = 25
-  showAllPostsOnHomePage = true # default
-  postsOnHomePage = 15 # this option will be ignored if showAllPostsOnHomePage is set to true
-  tagsOverview = false # show tags overview by default.
-  showProjectsList = false # show projects list by default (if projects data file exists).
-  projectsUrl = "https://github.com/gohugoio" # title link for projects list
+# Default Theme
+theme= "gruvhugo"
 
-  highlightjs = true
-  highlightjslanguages = [ "bash", "css", "diff", "java", "javascript", "python", "golang" ]
-  toc = true
-  posts_navigation = true
-  progressively = true
-  github = "alebaffa"
-  linkedin = "alessandrobaffa"
-  twitter = "alebaffa"
+# Default Post Extension
+defaultExtension= "html"
 
-[params.comments]
-    enabled = false # default
-    engine = "disqus" # more supported engines will be added.
+# Default metadata format for newly created frontmatter using
+# hugo new command. "toml", "yaml", or "json"
+metaDataFormat= "toml"
 
-  # the value of name should be an valid font awesome icon name (brands type)
-  # https://fontawesome.com/icons?d=gallery&s=brands
+[taxonomies]
+  tag      = "tags"
+  category = "categories"
+  series   = "series"
+
+[params.main]
+  enabled = true
+  enableKatex = true
+  metaKeywords = "fast, hugo, theme, minimal, gruvbox"
+  headerTitle = "Hi!"
+  copyright = "© 2021 Alessandro Baffa.  <a href=\"https://creativecommons.org/licenses/by/4.0/\">Some rights reserved</a>."
+  name = "jane_doe"
+  img = "images/author.png"
+  #img_title = "Thanks to Christina @ wocintechchat.com for this photo."
+  #icon = "ima/logo.png"
+  quote = "Computer Science is no more about computers than Astronomy is about telescopes."
+  description= """I am Alessandro Baffa, I am a software engineer and solutions architect from Italy and currently based in Tokyo. 
+  <br /><br />
+  
+  My specialities are enterprise Java based Web backend development, Agile development practices, clean code, AWS infrastructure architecture, IoT architecture design, enterprise distributed ledgers and blockchains.
+  <br /><br />
+  
+  I love helping people to learn things and improve their software skills. I have experience in organizing technical events for developers from local meetups, communities of practices in companies and small conferences."""
+  licenseUrl = ""
+
+ # Social icons
+  [[params.social]]
+    name = "twitter"
+    url  = "https://twitter.com/alebaffa"
+
   [[params.social]]
     name = "github"
-    link = "https://github.com/alebaffa"
+    url  = "https://github.com/alebaffa"
+
   [[params.social]]
     name = "linkedin"
-    link = "https://www.linkedin.com/in/alessandrobaffa/"
+    url  = "https://www.linkedin.com/alessandrobaffa"
 
-[[menu.main]]
-name = "Home"
-url = "/"
-weight = 1
+  [[params.social]]
+    name = "facebook"
+    url  = "https://www.facebook.com/alessandro.baffa"
 
-[[menu.main]]
-name = "Posts"
-url = "/blog"
-weight = 2
+[params.style]
+  # add path to custom CSS files here
+  custom_css = []
+  # add path to custom SCSS files here
+  custom_scss = []
+
+[menu]
+#   [[menu.main]]
+#     identifier = "about"
+#     name       = "About"
+#     url        = "about"
+
+  [[menu.main]]
+    identifier = "posts"
+    name       = "Posts"
+    url        = "post/"
+
+#   [[menu.main]]
+#     identifier = "wiki"
+#     name       = "Wiki"
+#     url        = "none"
 
 [markup]
+  defaultMarkdownHandler = "goldmark"
+  [markup.asciidocExt]
+    backend = "html5"
+    docType = "article"
+    extensions = []
+    failureLevel = "fatal"
+    noHeaderOrFooter = true
+    safeMode = "unsafe"
+    sectionNumbers = false
+    trace = false
+    verbose = true
+    workingFolderCurrent = false
+    [markup.asciidocExt.attributes]
+  [markup.blackFriday]
+    angledQuotes = false
+    footnoteAnchorPrefix = ""
+    footnoteReturnLinkContents = ""
+    fractions = true
+    hrefTargetBlank = false
+    latexDashes = true
+    nofollowLinks = false
+    noreferrerLinks = false
+    plainIDAnchors = true
+    skipHTML = false
+    smartDashes = true
+    smartypants = true
+    smartypantsQuotesNBSP = false
+    taskLists = true
+  [markup.goldmark]
+    [markup.goldmark.extensions]
+      definitionList = true
+      footnote = true
+      linkify = true
+      strikethrough = true
+      table = true
+      taskList = true
+      typographer = true
+    [markup.goldmark.parser]
+      attribute = true
+      autoHeadingID = true
+      autoHeadingIDType = "github"
+    [markup.goldmark.renderer]
+      hardWraps = false
+      unsafe = false
+      xhtml = false
+  [markup.highlight]
+    codeFences = true
+    guessSyntax = false
+    hl_Lines = ""
+    lineNoStart = 1
+    lineNos = false
+    lineNumbersInTable = true
+    noClasses = true
+    style = "monokai"
+    tabWidth = 4
   [markup.tableOfContents]
-    endLevel = 4
+    endLevel = 3
     ordered = false
     startLevel = 2
-
-#[[menu.primary]]
-#identifier = "blog"
-#name = "Blog"
-#url = "/blog/"
-#weight = 10
-
-#[[menu.primary]]
-#identifier = "about"
-#name = "About"
-#url = "/about/"
-#weight = 20
-
-#[[menu.secondary]]
-#identifier = "patreon"
-#name = "Become a patron"
-#url = "https://www.patreon.com/bePatron?u=10637849"
-#weight = 110
-
-#[[menu.secondary]]
-#identifier = "bmc"
-#name = "Buy me a coffee"
-#url = "https://www.buymeacoffee.com/gokmen"
-#weight = 120
-
-[[menu.footer]]
-identifier = "tags"
-name = "Tags"
-url = "/tags/"
-weight =3
